@@ -2,10 +2,11 @@ from flask import Blueprint, render_template, request, flash, redirect, url_for
 from flask_login import login_required, current_user
 
 from ...extensions import db
-from ...models import Users, Players, Pokedex, Pokemon, Sessions, PokedexBase
+from ...models import Users, Players, Pokedex, Pokemon, Sessions, PokedexBase, Artists
 from ...webforms import CreateSessionForm
 from .main_utils import find_first_missing_session_number
 from ...utils import get_default_vars
+from ..pokemon.pokemon import MANUAL_RULESET, AUTO_RULESET, ROUTE_RULESET, SPECIAL_RULESET
 
 main = Blueprint('main', __name__, template_folder='templates', static_folder='static', static_url_path='/main/static')
 
@@ -166,4 +167,95 @@ def session_manager(session_num):
                            full_evolution_list=full_evolution_list,  
                            party_length=party_length,
                            width_numbers=width_numbers)
-            
+
+
+@main.route('/preview_fusions/<int:player_num>/<int:link_id>', methods=['GET', 'POST'])
+@login_required
+def preview_fusions(player_num, link_id):
+    current_session, current_session_id, ruleset = get_default_vars(current_user.id)
+    selected_player = Players.query.join(Sessions).filter(Sessions.id == current_session_id, Players.number == player_num).first()
+    selected_pokemon = Pokemon.query.join(Sessions.players).join(Players.pokemon).filter(Sessions.id == current_session_id, Players.number == player_num, Pokemon.link_id == link_id).first()
+    if ruleset != ROUTE_RULESET:
+        possible_partners = Pokemon.query.join(Sessions.players).join(Players.pokemon).join(Pokedex).filter(Sessions.id == current_session_id, Players.number == player_num, Pokemon.link_id != link_id).filter(Pokedex.base_id_2 == None)
+    elif ruleset == ROUTE_RULESET:
+        possible_partners = Pokemon.query.join(Sessions.players).join(Players.pokemon).join(Pokedex).filter(Sessions.id == current_session_id, Players.number == player_num, Pokemon.link_id != link_id, Pokemon.route == selected_pokemon.route).filter(Pokedex.base_id_2 == None)
+    if ruleset == MANUAL_RULESET:
+        flash(f"Since session is using Full Freedom Ruleset possible fusions shown only for {selected_player.name}")
+        players = [selected_player]
+    else:
+        players = current_session.players
+    master_dict = {}
+    for partner in possible_partners:
+        partner_species = partner.info.species
+        master_dict[partner_species] = {
+                'info':{
+                    'number':partner.pokedex_number, 
+                    'typing':partner.info.type_primary if not partner.info.type_secondary else partner.info.type_primary + ' / ' + partner.info.type_secondary,
+                    'base_id_1':partner.info.base_id_1}, 
+                'fusions': {}}
+        for player in players:
+            if ruleset == SPECIAL_RULESET:
+                if partner.route == selected_pokemon.route:
+                    pokemon_same_route = Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.route == partner.route)
+                    pokemons_1 = [pokemon_same_route[0]]
+                    pokemons_2 = [pokemon_same_route[1]]
+                elif player.id == selected_pokemon.player_id:
+                    pokemons_1 = [selected_pokemon]
+                    pokemons_2 = [partner]
+                else:
+                    pokemons_1 = Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.route == selected_pokemon.route)
+                    pokemons_2 = Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.route == partner.route)
+            elif ruleset in AUTO_RULESET:
+                pokemons_1 = Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.link_id == selected_pokemon.link_id)
+                pokemons_2 = Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.link_id == partner.link_id)
+            elif ruleset == ROUTE_RULESET:
+                pokemons_1 = [Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.route == selected_pokemon.route)[0]]
+                pokemons_2 = [Pokemon.query.filter(Pokemon.player_id == player.id, Pokemon.route == selected_pokemon.route)[1]]
+            else:
+                pokemons_1 = [selected_pokemon]
+                pokemons_2 = [partner]    
+            master_dict[partner_species]['fusions'][player.name] = {}
+            for pokemon_1 in pokemons_1:
+                for pokemon_2 in pokemons_2:
+                    pokedex_number_norm = pokemon_1.pokedex_number + '.' + pokemon_2.pokedex_number
+                    pokedex_number_swap = pokemon_2.pokedex_number + '.' + pokemon_1.pokedex_number
+                    combo = pokemon_1.info.species + ' + ' + pokemon_2.info.species
+                    norm = Pokedex.query.filter(Pokedex.number == pokedex_number_norm).first()
+                    artist_norm = Artists.query.filter(Artists.sprite == pokedex_number_norm).first().artist
+                    swap = Pokedex.query.filter(Pokedex.number == pokedex_number_swap).first()
+                    artist_swap = Artists.query.filter(Artists.sprite == pokedex_number_swap).first().artist
+                    curr_fusion = {
+                        'norm':{
+                            'number':norm.number, 
+                            'species':norm.species, 
+                            'typing':norm.type_primary if not norm.type_secondary else norm.type_primary + ' / ' + norm.type_secondary, 
+                            'base_id_1':norm.base_id_1,
+                            'artist':artist_norm},
+                        'swap':{
+                            'number':swap.number, 
+                            'species':swap.species, 
+                            'typing':swap.type_primary if not swap.type_secondary else swap.type_primary + ' / ' + swap.type_secondary, 
+                            'base_id_1':swap.base_id_1,
+                            'artist':artist_swap}}
+                    final_norm = Pokedex.query.filter(Pokedex.family == norm.family).order_by(Pokedex.family_order.desc()).first()
+                    artist_final_norm = Artists.query.filter(Artists.sprite == final_norm.number).first().artist
+                    final_swap = Pokedex.query.filter(Pokedex.family == swap.family).order_by(Pokedex.family_order.desc()).first()
+                    artist_final_swap = Artists.query.filter(Artists.sprite == final_swap.number).first().artist
+                    final_fusion = {
+                        'norm':{
+                            'number':final_norm.number, 
+                            'species':final_norm.species, 
+                            'typing':final_norm.type_primary if not final_norm.type_secondary else final_norm.type_primary + ' / ' + final_norm.type_secondary, 
+                            'base_id_1':final_norm.base_id_1,
+                            'artist':artist_final_norm}, 
+                        'swap':{
+                            'number':final_swap.number, 
+                            'species':final_swap.species, 
+                            'typing':final_swap.type_primary if not final_swap.type_secondary else final_swap.type_primary + ' / ' + final_swap.type_secondary, 
+                            'base_id_1':final_swap.base_id_1,
+                            'artist':artist_final_swap}}
+                    master_dict[partner_species]['fusions'][player.name][combo] = {'current':curr_fusion, 'final':final_fusion}
+    return render_template('preview_fusions.html',
+                           players=players,
+                           selected_pokemon=selected_pokemon, 
+                           master_dict=master_dict)
