@@ -1,0 +1,103 @@
+{% extends 'layout.html' %}
+
+{% block title %}
+    Preview Fusions
+{% endblock %}
+
+{% block header %}
+    Preview Fusions - {{ selected_pokemon.player.name }}'s {{ selected_pokemon.info.species }}
+{% endblock %}
+
+{% block jscript %}
+<script>
+    function calc()
+    {
+        final_fusions = document.getElementsByClassName('final_fusions')
+        curr_fusions = document.getElementsByClassName('curr_fusions')
+        if (document.getElementById('toggle_final_fusions').checked) 
+        {
+            for (let i = 0; i < curr_fusions.length; i++) {
+                curr_fusions[i].style.display="none";
+            }
+            for (let i = 0; i < final_fusions.length; i++) {
+                final_fusions[i].style.display="";
+            }
+        } else {
+            for (let i = 0; i < final_fusions.length; i++) {
+                final_fusions[i].style.display="none";
+            }
+            for (let i = 0; i < curr_fusions.length; i++) {
+                curr_fusions[i].style.display="";
+            }
+        }
+    }
+</script>
+{% endblock %}
+
+{% block main %}
+    <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" role="switch" id="toggle_final_fusions" onchange="calc();">
+        <label class="form-check-label" for="toggle_final_fusions">Show Final Evolutions of Fusions</label>
+    </div>
+    
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- <div class="col-lg-1">
+                <h2 style="text-align: center;">{{ selected_pokemon.info.species }}'s Partner</h2>
+            </div> -->
+            {% for player in players %}
+                <div class="col-lg-3">
+                    <h2 style="text-align: center;">{{ player.name }}'s Fusions</h2>
+                </div>
+            {% endfor %}
+        </div>
+        {% for partner, values in master_dict.items() %}
+            <div class="row shadow p-3 mb-3 bg-body-tertiary rounded">
+                <!-- <div class="col-lg-1">
+                    {{ partner }} - 
+                    {{ values['info']['typing'] }}
+                    <br>
+                    <img src="{{ url_for('main.static', filename='images/sprites/' ~ values['info']['base_id_1'] ~ '/' ~ values['info']['number'] ~ '.png') }}" onerror="this.onerror=null; this.src='/main/static/images/sprites/default/default.png'" width="150" height="150">
+                </div> -->
+                {% for player, combos in values['fusions'].items() %}
+                    <div class="col-lg-3 shadow">
+                        {% for combo, times in combos.items() %}
+                            <div class="row">
+                                <h2 style="text-align: center;">{{ combo }}</h2>
+                                <div class="row curr_fusions">
+                                    {% for type, info in times['current'].items() %}
+                                        <div class="col-lg-6">
+                                            {{ info['species'] }} - 
+                                            {{ info['typing'] }}
+                                            <br>
+                                            <img src="{{ url_for('main.static', filename='images/sprites/' ~ info['base_id_1'] ~ '/' ~ info['number'] ~ '.png') }}" onerror="this.onerror=null; this.src='/main/static/images/sprites/default/default.png'" width="150" height="150">
+                                            <br>
+                                            artist: {{ info['artist']}}
+                                            <br>
+                                            <a target ="_blank" rel="noopener noreferrer" href="https://if.daena.me/{{ info['number'] }}/">More info on FusionDex</a>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                                <div class="row final_fusions" style="display:none"> 
+                                    {% for type, info in times['final'].items() %}
+                                        <div class="col-lg-6">
+                                            {{ info['species'] }} - 
+                                            {{ info['typing'] }}
+                                            <br>
+                                            <img src="{{ url_for('main.static', filename='images/sprites/' ~ info['base_id_1'] ~ '/' ~ info['number'] ~ '.png') }}" onerror="this.onerror=null; this.src='/main/static/images/sprites/default/default.png'" width="150" height="150">
+                                            <br>
+                                            artist: {{ info['artist']}}
+                                            <br>
+                                            <a target ="_blank" rel="noopener noreferrer" href="https://if.daena.me/{{ info['number'] }}/">More info on FusionDex</a>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
