@@ -385,7 +385,7 @@ number,species,type_primary,type_secondary,name_1,name_2,family,family_order
 384,Riolu,Fighting,,Rio,lu,296,1
 385,Slakoth,Normal,,Sla,koth,385,1
 386,Vigoroth,Normal,,Vigo,roth,385,2
-387,Wailmer,Water,,Wail,mer,314,1
+387,Wailmer,Water,,Wail,mer,387,1
 388,Shinx,Electric,,Shi,inx,388,1
 389,Luxio,Electric,,Lu,xio,388,2
 390,Aron,Steel,Rock,A,ron,390,1
